--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
+    "react-addons-transition-group": "^15.6.2",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4"
   },
@@ -16,7 +17,9 @@
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebookincubator/create-react-app).",
   "main": "index.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "react-transition-group": "^1.2.1"
+  },
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/jackzemlyanoy/jack.git"
