--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
-    "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
     "eslint": "4.10.0",
@@ -35,10 +34,10 @@
     "raf": "3.4.0",
     "react": "^16.4.1",
     "react-addons-transition-group": "^15.6.2",
+    "react-day-picker": "^7.1.10",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.1",
     "resolve": "1.6.0",
-    "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
     "webpack": "3.8.1",
@@ -54,8 +53,11 @@
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebookincubator/create-react-app).",
   "main": "index.js",
   "devDependencies": {
+    "css-loader": "^0.28.7",
+    "react-helmet": "^5.2.0",
     "react-select": "^2.0.0",
-    "react-transition-group": "^1.2.1"
+    "react-transition-group": "^1.2.1",
+    "style-loader": "^0.19.0"
   },
   "repository": {
     "type": "git",
